Use the result view font list for the base answers font.

BUG=733681

Review-Url: https://codereview.chromium.org/2943533002
Cr-Commit-Position: refs/heads/master@{#481332}

Former-commit-id: 720ecfbbc6d951e02e1025b26eeecbc79d9dfedf